👨‍🔧Fix content not visible beneath magical toolbar for gmail.

--- a/src/content-scripts/gmail/magically-toolbar-gmail.css
+++ b/src/content-scripts/gmail/magically-toolbar-gmail.css
@@ -77,3 +77,7 @@
     color: #ff003b;
     border: 2px solid #ff003b;
 }
+
+.magical-whitespace {
+    height: 3rem;
+}
